# Yantra_2024_REMDR

./: .gitignore  app.py  controller.py  get_sensor_data.py  inference.py  main.py  pyproject.toml  train.py  video_object_detection.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: dataset.csv
utils/: general.py
weights/: sensor_model.pkl
